Ported to pure Java